corrected visibility of shoppingcart on wide screen

--- a/pawn_shop/src/components/PawnShop/PawnShop.css
+++ b/pawn_shop/src/components/PawnShop/PawnShop.css
@@ -147,7 +147,7 @@ p {
 
 .float-right {
   float: right;
-  visibility: hidden;
+
 }
 .mobile-hide {
   display: none;
